@@ -3925,12 +3925,8 @@ void job_time_limit(void)
 			   - job_ptr->tot_sus_time) / 60)
 			 * job_ptr->total_cpus);
 
-		/* Consider a job active if it has any active steps */
-		if (job_ptr->step_list &&
-		    (list_count(job_ptr->step_list) > 0))
-			job_ptr->time_last_active = now;
-
 		if (slurmctld_conf.inactive_limit &&
+		    (job_ptr->batch_flag == 0)    &&
 		    (job_ptr->time_last_active <= old) &&
 		    (job_ptr->part_ptr) &&
 		    (!(job_ptr->part_ptr->flags & PART_FLAG_ROOT_ONLY))) {
